non-production automatic internal IP

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -50,8 +50,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "node get-ip.js && react-scripts start",
+        "build": "node get-ip.js && react-scripts build",
         "test": "jest",
         "test:watch": "jest --watch",
         "eject": "react-scripts eject",
